Fixed to work with scala 2.10

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-.idea*
-*.iml
+tmp
+eclipse
+*.tmproj
+nbproject
+manifest.mf
+build
+dist
+logs
+project/project
+project/target
 target
-
+*.sublime-project
+*.sublime-workspace
+.DS_Store
+.*
