Moved to maven to work with simplespecs

--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     </prerequisites>
 
     <groupId>com.codahale</groupId>
-    <artifactId>jerkson_2.9.1</artifactId>
+    <artifactId>jerkson_2.10.0</artifactId>
     <version>0.6.0-SNAPSHOT</version>
     <name>Jerkson for Scala</name>
 
     <properties>
-        <scala.version>2.9.1</scala.version>
-        <jackson.version>2.0.2</jackson.version>
+        <scala.version>2.10.0</scala.version>
+        <jackson.version>2.1.1</jackson.version>
     </properties>
 
     <developers>
@@ -43,6 +43,17 @@
             <id>nativelibs4java</id>
             <url>http://nativelibs4java.sourceforge.net/maven</url>
         </repository>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -54,10 +65,25 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -67,12 +93,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.codahale</groupId>
-            <artifactId>simplespec_${scala.version}</artifactId>
-            <version>0.5.2</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -126,13 +146,6 @@
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
                     </args>
-                    <compilerPlugins>
-                        <compilerPlugin>
-                            <groupId>com.nativelibs4java</groupId>
-                            <artifactId>scalacl-compiler-plugin</artifactId>
-                            <version>0.2</version>
-                        </compilerPlugin>
-                    </compilerPlugins>
                     <charset>UTF-8</charset>
                 </configuration>
             </plugin>
